# cht-core

./: .auditignore  .browserslistrc  .dockerignore  .editorconfig  .eslintignore  .eslintrc  .gitattributes  .gitignore  .gitmodules  .huskyrc  .jshintrc  .mocharc.js  .prettierrc.json  .sonarcloud.properties  .stignore  .travis.yml  3.7.env  AGENTS.md  API_v1.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Changes.md  DEVELOPMENT.md  Dockerfile  Dockerfile.api  Dockerfile.sentinel  FOLLOW_UP_ISSUE_TEMPLATE.md  Gruntfile.js  INSTALL.md  LICENSE  Procfile  README.md  SECURITY.md  TESTING.md  add-permissions.js  architecture.md  audit-proxy.js  auth.js  base.yml  (+79 more)
.github/: CODEOWNERS  FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  zizmor.yml
.husky/: pre-commit
admin/: .eslintrc  eslint.config.mjs  package-lock.json  package.json
admin-tool/: README.md  angular.json  custom-webpack.config.js  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.spec.json
api/: .babelrc  .dockerignore  .eslintrc  .gitignore  .jshintrc  .npmignore  .travis.yml  Dockerfile  Dockerfile.helper  Gruntfile.js  LICENSE  README.md  analyzer.report.html  audit-proxy.js  (+26 more)
haproxy-healthcheck/: .gitignore  .tool-versions  Dockerfile  Makefile  README.md  check.py  compose.yml  logger.py  pyproject.toml
haproxy-healthcheck/mock-config/: initializerJson.json
haproxy-healthcheck/mock-config/conf.d/: mock-couchdb.conf
haproxy-healthcheck/requirements/: base-freeze.txt  test-freeze.txt  update.sh
haproxy-healthcheck/test/: test_check.py
(+15517 files in other folders)
